fixed the textarea spacing by deleting half of the rows and removed overflow auto.

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -156,7 +156,6 @@ footer{
         height: 430px;
         background-color: lightgray; 
         -webkit-overflow-scrolling: touch;
-        overflow: auto;
     }
     
     /* Styling the displayed link to fit into the content area */
